--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,9 +1,9 @@
 db:
   mysql:
-    dsn: "root:root@tcp(127.0.0.1:3306)/test?charset=utf8mb4&parseTime=True&loc=Local"
+    dsn: "root:root@tcp(127.0.0.1:3308)/green?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
-  addr: "127.0.0.1:6379"
+  addr: "127.0.0.1:6380"
 
 web:
   host: 127.0.0.1
