--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     ports:
-      - "3307:3306"
-    volumes:
+      - "3308:3306"
+#    volumes:
       # 加载初始化脚本
-      - ./scripts/mysql/:/docker-entrypoint-initdb.d/
+#      - ./scripts/mysql/:/docker-entrypoint-initdb.d/
   redis:
     image: redis:7.4.0
     restart: always
